[Refractor] : 코드 정리 - 개행 - 안쓰는 메소드 삭제